2001-01-09	Joel Sherrill <joel@OARcorp.com>

	* clock/clockdrv.c: Clean up.
	* include/bsp.h: Uncomment and fix set_vector() prototype.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* console/console-io.c: Removed unused variable initialized.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* clock/Makefile.am: Fixed reference to ckinit.c.
	* clock/clockdrv.c: Enabled fast idle.
	* console/console-io.c: Added console_initialize_hardware().

2000-12-19	Joel Sherrill <joel@OARcorp.com>

	* timer: New subdirectory.
	* timer/.cvsignore, timer/Makefile.am, timer/timer.c: New files.
	* tools/ChangeLog: New file.

2000-12-19	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Added tools subdirectory and removed commented out line.
	* configure.in: Added tools subdirectory.
	* tools: New subdirectory.
	* tools/.cvsignore, tools/Makefile.am, tools/configure.in,
	tools/runtest: New files -- based on powerpc/psim.
	* clock/clockdrv.c: Guessed new value for clock tick.  Need to
	add fast idle support.
	* include/bsp.h: tm27 support initiated.
	* Most tests appear to run correctly!

2000-12-13	Joel Sherrill <joel@OARcorp.com>

	* README: Updated.  We are now vectoring a clock tick ISR handler.
	But RTEMS is not returning from the ISR properly.
	* clock/clockdrv.c: Now causes interrupts but has not been calibrated.
	* include/bsp.h: Use <libcpu/tx3904.h>
	* startup/Makefile.am: Add setvec.c from shared.
	* startup/bspstart.c: Initialize the status register (SR) so
	no interrupts are masked but global interrupts (SR_IEC) are off.
	Added call to install the ISR prologue code.
	* wrapup/Makefile.am: Pick up more pieces from libcpu.

2000-12-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspclean.c: New file to explicitly invoke _sys_exit().
	* README: Updated.

2000-12-06	Joel Sherrill <joel@OARcorp.com>

	* README: Updated to reflect status.
	* startup/linkcmds: Added .ctor and .dtor sections to no avail.

2000-11-30	Joel Sherrill <joel@OARcorp.com>
